//
// Copyright 2019 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.examples.veracruz_demo;
option java_multiple_files = true;
option java_package = "com.google.oak.veracruz_demo";

message RandomRequest {
  uint32 number_of_bytes = 1;
}

message RandomResponse {
  bytes data = 1;
}

message RandomResult {
  uint32 status = 1;
}

// As seen in https://grpc.io/docs/guides/concepts/.
service VeracruzDemo {
  rpc GenerateRandom(RandomRequest) returns (RandomResponse);
  rpc ForwardRandom(RandomRequest) returns (RandomResult);
}
